<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.apps.philipps.fade.activities.Options">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtPurposeOfTraining"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_plan_purpose_of_training"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:id="@+id/rbInhalation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/create_plan_inhalation" />

                <RadioButton
                    android:id="@+id/rbExhalation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/create_plan_exhalation" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_weight="1" />
            </RadioGroup>

            <TextView
                android:id="@+id/txtTargetDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_plan_target_duration"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnMinutesPlus"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="60dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/colorBtnPlus"
                        android:text="+" />

                    <EditText
                        android:id="@+id/etDurationOfExercise"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ems="10"
                        android:inputType="number"
                        android:text="5"
                        android:textAlignment="center" />

                    <Button
                        android:id="@+id/btnMinutesMinus"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="60dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/colorBtnMinus"
                        android:text="-" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txtMinutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/minutes"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        tools:gravity="bottom">

        <Button
            android:id="@+id/btnCancelPlan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/cancel"
            android:textColor="@color/textbg" />

        <Button
            android:id="@+id/btnSubmitPlan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/submit"
            android:textColor="@color/textbg" />
    </LinearLayout>
</LinearLayout>